--- a/privacy.html
+++ b/privacy.html
@@ -1,44 +1,30 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy | Dean's Handyman Service LLC</title>
-    <style>
-        body { font-family: sans-serif; line-height: 1.6; color: #333; padding: 40px; max-width: 800px; margin: 0 auto; }
-        h1 { color: #005073; }
-        h2 { font-size: 1.2rem; margin-top: 20px; }
-        a { color: #005073; }
-    </style>
+  <meta charset="UTF-8">
+  <title>Privacy Policy | Dean's Handyman Service LLC</title>
+  <style>
+    body { font-family: sans-serif; line-height: 1.6; color: #333; padding: 40px; max-width: 800px; margin: 0 auto; }
+    h1 { color: #005073; }
+    .back-link { display: block; margin-bottom: 20px; text-decoration: none; color: #005073; font-weight: bold; }
+  </style>
 </head>
 <body>
-    <h1>Privacy Policy</h1>
-    <p>Last updated: Feb 2026</p>
-    
-    <p>Dean's Handyman Service LLC operates deanshandymanservice.me. This page informs you of our policies regarding the collection, use, and disclosure of Personal Information we receive from users of the Site.</p>
+  <a href="index.html" class="back-link">← Back to Home</a>
+  <h1>Privacy Policy</h1>
+  <p>Last Updated: February 2026</p>
+  <p>At Dean's Handyman Service LLC, we value your privacy. This policy explains how we handle your information.</p>
+  
+  <h3>1. Information We Collect</h3>
+  <p>We collect information you provide directly to us through our contact forms, chatbot, or quote estimator, such as your name, phone number, email address, and service location.</p>
 
-    <h2>Information Collection</h2>
-    <p>We only collect information you voluntarily provide via our Quote Forms or Email links, including:</p>
-    <ul>
-        <li>Name</li>
-        <li>Phone Number</li>
-        <li>Service Address</li>
-        <li>Email Address</li>
-    </ul>
+  <h3>2. How We Use Information</h3>
+  <p>We use this information solely to provide handyman services, provide quotes, and communicate with you about your projects.</p>
 
-    <h2>How We Use Data</h2>
-    <p>We use your data solely to:</p>
-    <ul>
-        <li>Provide estimates and quotes.</li>
-        <li>Schedule services.</li>
-        <li>Communicate regarding your project.</li>
-    </ul>
-    <p>We <strong>never</strong> sell your data to third parties.</p>
+  <h3>3. Third-Party Services</h3>
+  <p>Our website uses Zapier for chatbot functionality and third-party payment processors (Square, PayPal, Venmo, Cash App). These services have their own privacy policies regarding your data.</p>
 
-    <h2>Contact Us</h2>
-    <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:deanshandymanservice1@gmail.com">deanshandymanservice1@gmail.com</a>.</p>
-    
-    <br><br>
-    <a href="index.html">← Return to Home</a>
+  <h3>4. Contact Us</h3>
+  <p>If you have questions, contact us at deanshandymanservice1@gmail.com.</p>
 </body>
 </html>
