--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,6 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   
   <style>
-    /* --- CORE STYLES --- */
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body { font-family: 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #333; background: #fdfdfd; }
     :root { --primary: #005073; --primary-dark: #003a54; --accent: #d4af37; --white: #ffffff; }
@@ -52,24 +51,24 @@
 <section class="container">
   <div class="gallery-header" data-aos="fade-up">
     <h1>Project Gallery</h1>
-    <p>See the quality of our work in Pittsburg and the surrounding 200-mile radius.</p>
+    <p>Real photos of my work serving Pittsburg and the 200-mile radius.</p>
   </div>
 
-  <div style="margin-top: 40px;" data-aos="fade-up" data-aos-delay="100">
-    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-    <div class="elfsight-app-4389146f-c10f-4886-8968-07e376046e7b" data-elfsight-app-lazy></div>
+  <div style="margin-top: 20px; min-height: 400px;" data-aos="fade-up" data-aos-delay="100">
+    <script src="https://elfsightcdn.com/platform.js" async></script>
+    <div class="elfsight-app-b44d4883-d56d-4b53-9744-7e78cc29adee" data-elfsight-app-lazy></div>
   </div>
 
   <div class="album-link-box" data-aos="fade-up">
-    <p style="margin-bottom: 15px;">Having trouble viewing the gallery above?</p>
-    <a href="https://photos.app.goo.gl/ihv1j4HSQZGuD6wD9" target="_blank" class="btn-album">View Full Photo Album on Google</a>
+    <p style="margin-bottom: 15px;">Want to see the full collection? Visit the Google Photos Album:</p>
+    <a href="https://photos.app.goo.gl/ihv1j4HSQZGuD6wD9" target="_blank" class="btn-album">Open Google Photo Album</a>
   </div>
 </section>
 
 <footer class="site-footer">
   <div class="container">
     <p>Dean's Handyman Service LLC | Pittsburg, TX 75686 | (281) 917-9914</p>
-    <p style="margin-top:10px; font-size:0.8rem; opacity: 0.8;">Professional Handyman & Starlink Specialist</p>
+    <p style="margin-top:10px; font-size:0.8rem; opacity: 0.8;">Serving 200 miles around 75686</p>
   </div>
 </footer>
 
