--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 <section class="container" style="padding: 60px 0;">
     <h2>Our Recent Projects</h2>
     <p style="text-align:center; margin-bottom:30px;">Real results for our clients across the Ark-La-Tex region.</p>
-    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-    <div class="elfsight-app-4389146f-c10f-4886-8968-07e376046e7b" data-elfsight-app-lazy></div>
+    <script src="https://elfsightcdn.com/platform.js" async></script>
+    <div class="elfsight-app-b44d4883-d56d-4b53-9744-7e78cc29adee" data-elfsight-app-lazy></div>
 </section>
 
 <section class="container" style="padding-bottom: 60px;">
@@ -145,7 +145,7 @@
         <div style="flex: 1; min-width: 320px; max-width: 400px; border: 1px solid #ddd; border-radius: 8px; overflow: hidden;">
             <div style="background: var(--primary); color: white; padding: 10px; text-align: center; font-weight: bold;">Assistant Chat</div>
             <script async type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
-            <zapier-interfaces-chatbot-embed is-popup='false' chatbot-id='cmla3f83s001hfy8tds4wmpva' height='500px' width='100%'></zapier-interfaces-chatbot-embed>
+            <zapier-interfaces-chatbot-embed is-popup='false' chatbot-id='cmla3f83s001hfy8tds4wmpva' height='600px' width='400px'></zapier-interfaces-chatbot-embed>
         </div>
 
         <div style="flex: 1; min-width: 320px; max-width: 500px; padding: 30px; background: var(--light); border-radius: 8px; text-align: center;">
