--- a/starlink-install.html
+++ b/starlink-install.html
@@ -2,77 +2,58 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Starlink Installation Pittsburg TX | 200-Mile Radius Service</title>
-  <meta name="description" content="Professional Starlink mounting and setup in 75686, Pittsburg TX, and 200 miles around. Residential, RV, and Mobile Starlink integration by Dean's Handyman.">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <title>Starlink Installation & Referral | Dean's Handyman 75686</title>
+  <meta name="description" content="Professional Starlink setup in Pittsburg, TX. Learn how to get your kit for $0 and book expert installation within 200 miles.">
   <style>
+    /* Use standard header/footer CSS */
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body { font-family: 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #333; background: #fdfdfd; }
-    :root { --primary: #005073; --primary-dark: #003a54; --accent: #d4af37; --white: #ffffff; }
-    .container { max-width: 1200px; margin: 0 auto; padding: 0 20px; }
-    .site-header { background: var(--white); box-shadow: 0 2px 20px rgba(0,0,0,0.05); position: sticky; top: 0; z-index: 1000; padding: 15px 0; }
-    .site-header .container { display: flex; justify-content: space-between; align-items: center; }
-    .logo a { font-weight: 900; font-size: 1.5rem; text-decoration: none; color: var(--primary-dark); text-transform: uppercase; }
-    .main-nav a { color: var(--primary-dark); text-decoration: none; margin-left: 20px; font-weight: 600; font-size: 0.85rem; text-transform: uppercase; }
-    .starlink-hero { background: #000; color: white; padding: 80px 0; text-align: center; border-bottom: 5px solid var(--accent); }
-    .feature-list { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; padding: 60px 0; }
-    .feature-item { background: white; padding: 25px; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
-    .btn { display: inline-block; padding: 12px 25px; border-radius: 4px; text-decoration: none; font-weight: bold; background: var(--accent); color: black; margin-top: 20px; }
-    .site-footer { background: #005073; color: white; padding: 40px 0; text-align: center; }
+    :root { --primary: #005073; --accent: #d4af37; --white: #ffffff; }
+    .container { max-width: 1100px; margin: 0 auto; padding: 0 20px; }
+    .hero-black { background: #000; color: white; padding: 60px 0; text-align: center; border-bottom: 4px solid var(--accent); }
+    .referral-box { background: #fff3cd; border: 2px dashed #856404; padding: 30px; border-radius: 8px; margin: 30px 0; text-align: center; }
+    .faq-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; margin-top: 30px; }
+    .faq-card { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); border-top: 4px solid var(--primary); }
+    .btn-gold { display: inline-block; padding: 15px 30px; background: var(--accent); color: black; text-decoration: none; font-weight: 900; border-radius: 5px; text-transform: uppercase; }
   </style>
 </head>
 <body>
 
-<header class="site-header">
+<section class="hero-black">
   <div class="container">
-    <div class="logo"><a href="index.html">Dean's Handyman</a></div>
-    <nav class="main-nav">
-      <a href="index.html">Home</a>
-      <a href="services.html">Services</a>
-      <a href="areas.html">Service Areas</a>
-      <a href="starlink-install.html">Starlink</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </div>
-</header>
-
-<section class="starlink-hero">
-  <div class="container">
-    <h1>High-Speed Satellite Internet Installation</h1>
-    <p style="font-size: 1.2rem; margin-top: 10px;">Professional Starlink Setup in Pittsburg, TX & Across a 200-Mile Radius</p>
-    <a href="index.html#booking-tool" class="btn">Get Install Quote</a>
+    <h1>The Ark-La-Tex Starlink Expert</h1>
+    <p>Get High-Speed Internet Anywhere—From the Deep Woods to the Open Ranch.</p>
   </div>
 </section>
 
-<section class="container">
-  <div class="feature-list">
-    <div class="feature-item">
-      <h3>🏠 Residential Mounting</h3>
-      <p>Custom roof mounts, wall mounts, or ground poles. We ensure zero obstructions and professional cable routing into your home.</p>
-    </div>
-    <div class="feature-item">
-      <h3>🚐 RV & Mobile Setup</h3>
-      <p>Flat-high performance mounts for mobile use. We specialize in making your internet work wherever your RV takes you.</p>
-    </div>
-    <div class="feature-item">
-      <h3>📶 Network Optimization</h3>
-      <p>Hardwiring devices, mesh system integration, and ensuring your Wi-Fi signal reaches every corner of your property.</p>
-    </div>
+<div class="container">
+  <div class="referral-box">
+    <h2>🎁 Get Your Starlink Kit for $0?</h2>
+    <p style="margin: 10px 0;">Starlink occasionally offers promotional credits or "Service Credits" for new sign-ups in specific rural areas. Use my referral link below to check current offers and start your order!</p>
+    <a href="https://www.starlink.com/?referral=RC-1249534-58531-1" target="_blank" class="btn-gold">Order Using My Referral Link</a>
+    <p style="font-size: 0.8rem; margin-top: 10px;">*Availability of $0 kits or service credits varies by Starlink's current regional promotions.</p>
   </div>
 
-  <div style="background: #f1f5f9; padding: 40px; border-radius: 8px; margin-bottom: 60px;">
-    <h2>Why Choose a Professional Installer?</h2>
-    <p>Installing Starlink often requires heights and drilling through exterior walls. We ensure the mount is secure against high winds and all penetrations are weather-sealed to protect your home or RV.</p>
-    <p style="margin-top: 15px;"><strong>Serving Pittsburg, Mt. Pleasant, Tyler, and beyond.</strong></p>
+  <h2>Common Starlink Questions</h2>
+  <div class="faq-grid">
+    <div class="faq-card">
+      <h3>Will it work at my house?</h3>
+      <p>If you have a clear view of the Northern sky, yes. We use professional tools to scan for obstructions (trees, buildings) before mounting to guarantee a solid signal.</p>
+    </div>
+    <div class="faq-card">
+      <h3>What is the monthly cost?</h3>
+      <p>Standard service is typically $120/month with no contracts. Roam (RV) service is $150/month and can be paused when not in use.</p>
+    </div>
+    <div class="faq-card">
+      <h3>Can I take it on my RV?</h3>
+      <p>Absolutely. We specialize in mobile mounting solutions that allow you to have internet while moving or parked at remote campsites.</p>
+    </div>
+    <div class="faq-card">
+      <h3>Do I need an adapter?</h3>
+      <p>If you want to plug in a computer or a third-party mesh system, you will need the Starlink Ethernet Adapter. We keep these in stock for our customers!</p>
+    </div>
   </div>
-</section>
-
-<footer class="site-footer">
-  <div class="container">
-    <p>Dean's Handyman Service LLC | (281) 917-9914 | Pittsburg, TX 75686</p>
-  </div>
-</footer>
+</div>
 
 </body>
 </html>
