--- a/starlink-install.html
+++ b/starlink-install.html
@@ -5,47 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Starlink Gen 3 & Mini Expert Installation | Pittsburg TX 75686</title>
   
-  <meta name="description" content="Official Starlink Gen 3 & Mini Installation. Serving 200 miles around Pittsburg, TX. Get your 2nd month FREE with our referral link. Expert mounting for homes & RVs.">
-  <meta name="keywords" content="Starlink Gen 3 Install, Starlink Mini RV mount, Starlink 75686, Starlink referral link free month, Pittsburg TX internet, Starlink Ark-La-Tex">
-
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <meta name="description" content="Official Starlink Gen 3 & Mini Installation. Serving 200 miles around Pittsburg, TX. Get your 2nd month FREE with our referral link.">
   
   <style>
-    /* --- MOBILE-FIRST CORE --- */
     * { box-sizing: border-box; margin: 0; padding: 0; }
-    body { font-family: 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #333; background: #fdfdfd; overflow-x: hidden; }
+    body { font-family: 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #333; background: #fdfdfd; }
     :root { --primary: #005073; --accent: #d4af37; --dark: #0f172a; --white: #ffffff; }
     .container { max-width: 1100px; margin: 0 auto; padding: 0 15px; }
     
-    /* --- NAVIGATION --- */
+    /* Navigation */
     .site-header { background: var(--white); box-shadow: 0 2px 10px rgba(0,0,0,0.05); padding: 15px 0; position: sticky; top: 0; z-index: 1000; }
     .site-header .container { display: flex; justify-content: space-between; align-items: center; }
     .logo a { font-weight: 900; font-size: 1.3rem; text-decoration: none; color: var(--primary); text-transform: uppercase; }
     .main-nav a { color: var(--primary); text-decoration: none; font-weight: 600; font-size: 0.8rem; text-transform: uppercase; margin-left: 10px; }
 
-    /* --- HERO & REFERRAL --- */
-    .hero { background: var(--dark); color: white; padding: 50px 0; text-align: center; }
-    .referral-alert { background: #fff3cd; border: 2px dashed #856404; padding: 25px; border-radius: 8px; margin: -30px auto 30px; max-width: 600px; position: relative; z-index: 10; text-align: center; }
+    /* Content Styling */
+    .hero { background: var(--dark); color: white; padding: 60px 0; text-align: center; }
+    .referral-alert { background: #fff3cd; border: 2px dashed #856404; padding: 25px; border-radius: 8px; margin: 20px auto; max-width: 600px; text-align: center; }
     .btn-gold { display: block; background: #856404; color: white; padding: 15px; text-decoration: none; font-weight: 900; border-radius: 5px; margin-top: 15px; font-size: 1.1rem; }
 
-    /* --- HARDWARE CARDS --- */
-    .hw-section { padding: 40px 0; }
-    .hw-card { background: white; border-radius: 12px; border: 1px solid #eee; margin-bottom: 25px; overflow: hidden; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
-    .hw-img { width: 100%; height: 200px; background: #f4f7f6; display: flex; align-items: center; justify-content: center; font-weight: bold; color: #999; }
-    .hw-content { padding: 20px; }
-    .hw-content h3 { color: var(--primary); margin-bottom: 10px; }
+    .hw-card { background: white; border-radius: 12px; border: 1px solid #eee; margin-bottom: 25px; padding: 20px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
+    .hw-card h3 { color: var(--primary); margin-bottom: 10px; }
     .badge { display: inline-block; background: #eee; padding: 2px 8px; border-radius: 4px; font-size: 0.75rem; margin-bottom: 10px; font-weight: bold; }
 
-    /* --- PLAN TABLE --- */
-    .plan-table { width: 100%; border-collapse: collapse; margin: 20px 0; font-size: 0.9rem; }
-    .plan-table th { background: var(--primary); color: white; padding: 10px; text-align: left; }
-    .plan-table td { padding: 10px; border-bottom: 1px solid #eee; }
+    .plan-table { width: 100%; border-collapse: collapse; margin: 20px 0; font-size: 0.9rem; background: white; }
+    .plan-table th { background: var(--primary); color: white; padding: 12px; text-align: left; }
+    .plan-table td { padding: 12px; border-bottom: 1px solid #eee; }
 
-    /* --- CITIES SECTION --- */
-    .city-cloud { display: flex; flex-wrap: wrap; gap: 8px; margin-top: 15px; }
-    .city-tag { background: #e2e8f0; padding: 4px 10px; border-radius: 4px; font-size: 0.75rem; color: #4a5568; }
-
-    .site-footer { background: var(--primary); color: white; padding: 30px 0; text-align: center; font-size: 0.8rem; }
+    .city-tag { display: inline-block; background: #e2e8f0; padding: 4px 10px; border-radius: 4px; font-size: 0.75rem; color: #4a5568; margin: 3px; }
+    .site-footer { background: var(--primary); color: white; padding: 30px 0; text-align: center; margin-top: 40px; }
   </style>
 </head>
 <body>
@@ -70,77 +58,48 @@
 </section>
 
 <div class="container">
-  <div class="referral-alert" data-aos="zoom-in">
-    <p><strong>🎁 LIMITED OFFER:</strong> Order your kit via the link below and get your <strong>2nd Month of Service FREE!</strong></p>
+  <div class="referral-alert">
+    <p><strong>🎁 EXCLUSIVE:</strong> Order your kit via the link below and get your <strong>2nd Month of Service FREE!</strong></p>
     <a href="https://starlink.com/residential?referral=RC-2034578-19016-61&app_source=share" target="_blank" class="btn-gold">CLAIM FREE MONTH</a>
   </div>
 
-  <div class="hw-section">
-    <h2>Select Your Hardware</h2>
-    
-    <div class="hw-card" data-aos="fade-up">
-      <div class="hw-img">STANDARD GEN 3 (v4)</div>
-      <div class="hw-content">
-        <span class="badge">Best for Homes & Ranches</span>
-        <h3>Standard Gen 3</h3>
-        <p>Featuring a 110° field of view and WiFi 6. We specialize in non-penetrating roof mounts and wall-pivot installs for this motorless dish.</p>
-        <p><strong>Power:</strong> 75-100W | <strong>Speed:</strong> Up to 400 Mbps</p>
-      </div>
-    </div>
-
-    <div class="hw-card" data-aos="fade-up">
-      <div class="hw-img">STARLINK MINI</div>
-      <div class="hw-content">
-        <span class="badge">Best for RVs & Travel</span>
-        <h3>Starlink Mini</h3>
-        <p>Compact, backpack-friendly, and ultra-low power. We offer custom 12V/USB-C hardwiring and magnetic vehicle mounts for nomads.</p>
-        <p><strong>Power:</strong> 25-40W | <strong>Speed:</strong> Up to 260 Mbps</p>
-      </div>
-    </div>
-
-    <div class="hw-card" data-aos="fade-up">
-      <div class="hw-img">PERFORMANCE GEN 3</div>
-      <div class="hw-content">
-        <span class="badge">Best for Business & Large Estates</span>
-        <h3>Performance (Enterprise)</h3>
-        <p>Massive 140° field of view (sees 35% more sky). Best for areas with partial tree coverage. Gigabit-ready hardware.</p>
-        <p><strong>Wind:</strong> 170mph+ | <strong>Snow Melt:</strong> 3.5"/hr</p>
-      </div>
-    </div>
+  <h2 style="margin: 40px 0 20px;">2026 Hardware Options</h2>
+  
+  <div class="hw-card">
+    <span class="badge">Standard Home/Ranch</span>
+    <h3>Standard Gen 3 (V4)</h3>
+    <p>The "Kickstand" model. High speeds up to 400 Mbps. We specialize in non-penetrating ridge mounts and wall-pivot installs.</p>
   </div>
 
-  <h2>2026 Service Plans</h2>
+  <div class="hw-card">
+    <span class="badge">Travel & RV</span>
+    <h3>Starlink Mini</h3>
+    <p>Ultra-portable. Built-in WiFi. We offer 12V DC power conversions and magnetic mounts for vehicles and campers.</p>
+  </div>
+
+  <h2 style="margin: 40px 0 20px;">Official 2026 Service Plans</h2>
   <div style="overflow-x: auto;">
     <table class="plan-table">
       <thead>
-        <tr><th>Plan Name</th><th>Price</th><th>Speed Cap</th><th>Best For</th></tr>
+        <tr><th>Plan</th><th>Price</th><th>Speed</th><th>Best For</th></tr>
       </thead>
       <tbody>
-        <tr><td>Residential 100</td><td>$50/mo</td><td>100 Mbps</td><td>Basic Use</td></tr>
+        <tr><td>Residential 100</td><td>$50/mo</td><td>100 Mbps</td><td>Basic Streaming</td></tr>
         <tr><td>Residential 200</td><td>$80/mo</td><td>200 Mbps</td><td>Average Families</td></tr>
-        <tr><td>Residential MAX</td><td>$120/mo</td><td>Unlimited</td><td>Power Users</td></tr>
-        <tr><td>Roam 100GB</td><td>$50/mo</td><td>260 Mbps</td><td>Weekend Trips</td></tr>
-        <tr><td>Roam Unlimited</td><td>$165/mo</td><td>Unlimited</td><td>Full-time RVers</td></tr>
+        <tr><td>Residential MAX</td><td>$120/mo</td><td>400+ Mbps</td><td>Power Users / Pro</td></tr>
+        <tr><td>Roam Unlimited</td><td>$165/mo</td><td>Varies</td><td>Full-time RV Living</td></tr>
       </tbody>
     </table>
   </div>
 
   <div style="background: #f1f5f9; padding: 25px; border-radius: 8px; margin: 30px 0;">
-    <h3>200-Mile Service Area (Ark-La-Tex)</h3>
-    <p>Based in <strong>Pittsburg, TX 75686</strong>. We travel to every corner of East Texas, Oklahoma, and Arkansas. <strong>No travel fee for the first 100 miles!</strong></p>
+    <h3>Serving a 200-Mile Radius from 75686</h3>
+    <p style="margin-bottom: 10px;">Free travel for the first 100 miles! We cover:</p>
     <div class="city-cloud">
       <span class="city-tag">Mt. Pleasant</span><span class="city-tag">Tyler</span><span class="city-tag">Longview</span>
-      <span class="city-tag">Texarkana</span><span class="city-tag">Sulphur Springs</span><span class="city-tag">Marshall</span>
-      <span class="city-tag">Paris</span><span class="city-tag">Broken Bow, OK</span><span class="city-tag">Idabel, OK</span>
-      <span class="city-tag">Shreveport, LA</span><span class="city-tag">Carthage</span><span class="city-tag">Gilmer</span>
-      <span class="city-tag">Winnsboro</span><span class="city-tag">Jefferson</span><span class="city-tag">Atlanta, TX</span>
+      <span class="city-tag">Texarkana</span><span class="city-tag">Broken Bow, OK</span><span class="city-tag">Shreveport, LA</span>
+      <span class="city-tag">Paris</span><span class="city-tag">Sulphur Springs</span><span class="city-tag">Gilmer</span>
     </div>
-  </div>
-  
-  <div style="margin: 40px 0; border-left: 4px solid var(--accent); padding-left: 15px;">
-    <h4>The Future of Starlink (2026-2027)</h4>
-    <p><strong>Gigabit Speeds:</strong> Launching later this year via Starship-launched v3 satellites. No hardware changes needed for Gen 3 owners!</p>
-    <p><strong>Direct-to-Cell:</strong> Native voice and data for unmodified phones in dead zones is rolling out now across the T-Mobile network.</p>
   </div>
 </div>
 
@@ -150,9 +109,6 @@
     <p>© 2026 • Professional Starlink Consultation & Installation</p>
   </div>
 </footer>
-
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.css"></script>
-<script>AOS.init({ once: true });</script>
 
 </body>
 </html>
